# epc_moduless

./: CODEBASE_AUDIT.md  LICENSE  MANIFEST.in  MISSING_FEATURES.md  README.md  SQL_ISSUES_FOUND.md  app.json  hooks.py  modules.txt  pyproject.toml  setup.py
api/: cost_line_api.py  demo_api.py  job_type_api.py  kanban_api.py  material_plan_api.py  wip_api.py
doctype/Cost Line Breakdown/: Cost Line Breakdown.json  Cost Line Breakdown.py  Cost Line Item.json
doctype/Job Type/: Job Type.json  Job Type.py
doctype/Material Plan/: Material Plan Item.json  Material Plan.json  Material Plan.py
epc_modules/: __init__.py  event_handlers.py  event_handlers.py.old  hooks.py  module.js  workflows.py
epc_modules.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
epc_modules/api/: billing_api.py  boq_api.py  concrete_api.py  construction_api.py  contracts_api.py  dashboard_api.py  document_api.py  dpr_api.py  finance_api.py  hse_api.py  mb_api.py  project_api.py  wbs_api.py  (+4 more)
fixtures/: custom_field.json  dashboard_charts.json  dashboards.json  form_workflow.json  job_type.json  project_typology.json  property_setter.json  typology_defaults.json  workspace_links.json  workspace_shortcuts.json  workspaces.json
scripts/: create_demo_data.py  install_doctypes.py  install_workspace_fixtures.py
www/: cost-line-breakdown.css  cost-line-breakdown.html  cost-line-breakdown.js  epc_kanban.css  epc_kanban.js  epc_wip.css  epc_wip.js  job-type-config.css  job-type-config.html  job-type-config.js  kanban-project-overview.html  material-plan.css  material-plan.html  material-plan.js  wip-report.html
(+417 files in other folders)
