[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "epc_modules"
version = "1.0.0"
description = "Comprehensive EPC Module for ERPNext"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "EPC Development Team", email = "dev@organization.com"}
]
keywords = ["erpnext", "frappe", "epc", "construction", "project-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Frappe",
]

dependencies = [
    "frappe>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/organization/epc_modules"
Documentation = "https://docs.organization.com/epc_modules"
Repository = "https://github.com/organization/epc_modules"
Issues = "https://github.com/organization/epc_modules/issues"

[tool.flit.module]
name = "epc_modules"

[tool.flit.sdist]
include = [
    "epc_modules/",
    "fixtures/",
]

[tool.frappe]
app-title = "EPC Project Management"
app-description = "Comprehensive EPC Module for ERPNext"
app-icon = "octicon octicon-project"
app-color = "#3498db"
app-email = "dev@organization.com"
app-publisher = "EPC Development Team"
app license = "MIT"

[tool.frappe.modules]
EPC Modules = "EPC Project Management"